# emergence

./: .gitignore  CMakeLists.txt  LICENSE  README.org
data/: README.org
data/script/: 1.p  1.py  2.p  2.py  3.p  3.py  4.py  4_emerge.p  4_survive.p  4_ttr.p  5.py  6.p  6.py  meta.py
etc/: basic.glsl  basic.shader
opt/fonts/: LICENSE-LiberationMono
pub/: pdf.tcl  thesis.tex
src/: const.hh  main.cc  test.cc
src/controller/: controller.cc  controller.hh
src/exp/: control.cc  control.hh  exp.cc  exp.hh
src/gl/: ibuffer.cc  ibuffer.hh  indexbuffer.cc  indexbuffer.hh  shader.cc  shader.hh  varray.cc  varray.hh  vbuffer.cc  vbuffer.hh  vbufferlayout.cc  vbufferlayout.hh  vertexarray.cc  vertexarray.hh  vertexbuffer.cc  vertexbuffer.hh  vertexbufferlayout.cc  vertexbufferlayout.hh
src/model/: model.cc  model.hh
src/proc/: cl.cc  cl.hh  control.cc  control.hh  control.test.hh  proc.cc  proc.hh  proc.test.hh
src/processor/: processor.cc  processor.hh
src/shader/: emergence.shader
src/state/: state.cc  state.hh  state.test.hh
src/sys/: cl.cc  cl.hh  sys.cc  sys.hh
src/util/: common.hh  debug.cc  file.cc  io.cc  log.cc  log.hh  math.cc  observation.cc  observation.hh  random.cc  string.cc  util.cc  util.hh  util.test.hh
src/view/: canvas.cc  canvas.hh  drawer.cc  drawer.hh  gl.cc  gl.hh  gui.cc  gui.hh  headless.cc  headless.hh  image.cc  image.hh  scene.cc  scene.hh  state.cc  state.hh  view.cc  view.hh  view.test.hh  visualiser.cc  visualiser.hh
test/: proc.hh  state.hh  sys.hh  test.cc  util.hh  view.hh
thesis/: 00bib.tex  00pre.tex  01intro.tex  02over.tex  03impl.tex  04assess.tex  05work.tex  _abstract.xmpdata  _bib.bib  _macros.tex  _thesis.xmpdata  abstract.tex  publish.tcl  thesis.tex
tools/: meta.py  plot.py
